navbar fixed z-index

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -105,6 +105,7 @@ h1 {
 	position: fixed;
 	margin: 0 auto;
 	text-align: center;
+	z-index: 500;
 }
 
 #navigation-bar 	 {
@@ -115,6 +116,7 @@ h1 {
 	position: fixed;
 	margin: 0 auto;
 	text-align: center;
+	z-index: 500;
 	//display: inline-block;
 	//list-style-type: none;
 
